# kicad-lib-docs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml
.github/workflows/: cd.yml  ci.yml
resources/test/: lib.kicad_sym
src/: docgen.rs  footprints.rs  main.rs  md.rs  symbols.rs
